# RAG

./: CNAME  README.md  pyproject.toml
.devcontainer/: devcontainer.json
development_application/: app.py  requirements.txt
development_application/faiss_index/: index.faiss  index.pkl
development_application/utils/: rag.py
